Bug 136816 - Entire Legend corrupted in chart in LibreOffice calc when hiding last data series from legend in "column and line" chart
Summary: Entire Legend corrupted in chart in LibreOffice calc when hiding last data se...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart-Legends
  Show dependency treegraph
 
Reported: 2020-09-16 17:58 UTC by Anonimous User
Modified: 2020-12-21 10:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice Calc Example File. (21.34 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-10-01 09:12 UTC, Anonimous User
Details
Screenshot showing how Legend Disappears (91.02 KB, image/png)
2020-10-01 09:13 UTC, Anonimous User
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anonimous User 2020-09-16 17:58:23 UTC
Description:
Hiding the legend for the last data series on a "column and line" chart hides the entire legend instead of just the last data series. 

Was trying to get the "Total" to appear above a stacked chart and following the recommendation that you have a "Column and Line" chart with the "Total" data series hidden. 

Steps to Reproduce:
1. Create a stacked chart (Data series in columns, first row as label, first column as label)

2. Edit preferences for the last data set in the series
2.1 Click on chart data set, 
2.2 Select "Data Series"
2.3 Under "Options" Tab, Under LegendEntry Section and check "Hide Data Entry"

3. At this point all looks ok you've got a stacked chart with the legend looking ok with the last data series without a legend

4. Change chart type to "Column and Line" 

5. Notice that the Legend becomes a tiny box that cannot be resized (the bug)

To fix: Edit that data series options and unselect "Hide Legend Entry"

Actual Results:
Legend appears as a tiny box that cannot be resized. All you see of it is a tiny square of 4 border lines all completely collapsed.

Expected Results:
Expected: Legend should appear normally but without the last data series. 


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Version: 6.4.5.2
Build ID: 1:6.4.5-0ubuntu0.20.04.1
CPU threads: 12; OS: Linux 5.4; UI render: default; VCL: kf5; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Anonimous User 2020-10-01 09:12:30 UTC
Created attachment 165997 [details]
LibreOffice Calc Example File.

Example file showing this issue. The Legend in the file as saved is just fine. 

Change the data series "Total" Options to "Hidden" to see the legend completely disappear.
Comment 2 Anonimous User 2020-10-01 09:13:35 UTC
Created attachment 165998 [details]
Screenshot showing how Legend Disappears
Comment 3 NISZ LibreOffice Team 2020-12-12 13:18:11 UTC
This started in 7.0 with:

https://git.libreoffice.org/core/+/300e65cc47f3d6ae1563350757dbfadc080d7452

author
Tünde Tóth <tundeth@gmail.com> Thu Feb 20 14:39:11 2020 +0100 
committer
László Németh <nemeth@numbertext.org> Fri Mar 06 10:42:25 2020 +0100 

tdf#123268 fix lost chart if all legend entries are hidden

Adding CC to: Tünde Tóth
Comment 4 Commit Notification 2020-12-16 17:45:38 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1eb25c11500a235aa141a327a5489f6861e60a89

tdf#136816: fix hidden legend entries in "Column and Line" charts

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-12-17 11:56:51 UTC
Verified in

Version: 7.2.0.0.alpha0+
Build ID: 4484accf4d331a95ebf8475d6cd91950f4c27bcc
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Tünde Tóth, thanks for fixing this issue. Should it be closed as RESOLVED FIXED ?
Comment 6 Commit Notification 2020-12-17 12:01:42 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/0e30d1fcdd81c65bcf26723ba04d9dbd2bb08f30

tdf#136816: fix hidden legend entries in "Column and Line" charts

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2020-12-17 14:21:20 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/4114e5304425ff54e6957ef417e96e01a4cef532

tdf#136816: fix hidden legend entries in "Column and Line" charts

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.