tdf#136816: fix hidden legend entries in "Column and Line" charts

Regression from commit: 300e65cc47f3d6ae1563350757dbfadc080d7452
(tdf#123268 fix lost chart if all legend entries are hidden)

Change-Id: Id59cd8d681dada123feadbe7910be7fbc7ec37f6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/107757
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>